Updated manifest and favicon.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/favicon/FortniteInfo_Favicon.svg" />
+    <link rel="icon" type="image/png" href="./src/Icon/FortniteInfo_Icon.png" />
+    <link rel="manifest" href="./manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="FortniteInfo is a website that shows users Fortnite's current
     map images (with and without POIS), current Battle Royale, Save The World, and Creative News,
     and the current shop items (bundles and individual items). FortniteInfo also has a creator code
     page that checks whether a code is a valid creator code or not."/>
+    <meta name="theme-color" content="#086BBE" />
     <title>FortniteInfo</title>
   </head>
   <body>
