--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/png" href="./src/assets/Icon/FortniteInfo_Icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="FortniteInfo is a website that shows users Fortnite's current
-    map images (with and without POIS), current Battle Royale, Save The World, and Creative News,
-    and the current shop items (bundles and individual items). FortniteInfo also has a creator code
-    page that checks whether a code is a valid creator code or not.">
+    <meta name="description" content="FortniteInfo shows Fortnite's current map, news, and shop items and checks the validity of a creator code.">
     <meta name="theme-color" content="#086BBE">
     <title>FortniteInfo</title>
     
