Updated favicon and index

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/png" href="./src/assets/Icon/FortniteInfo_Icon.png">
+    <link rel="icon" type="image/png" href="./src/assets/favicon/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="FortniteInfo shows Fortnite's current map, news, and shop items and checks the validity of a creator code.">
     <meta name="theme-color" content="#086BBE">
